@@ -1,3 +1,10 @@
+2004-05-14  Muktha Narayan <muktha.narayan@wipro.com>
+
+	* gnome-wp-capplet.c (set_accessible_name): New
+	(wallpaper_properties_init): Add accessible names.
+
+	Fixes #142517
+
 2004-04-24  Rodney Dawes <dobey@ximian.com>
 
 	* gnome-wp-capplet.c (bg_add_multiple_files):
